journey app finished

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -71,3 +71,11 @@
     background: $button-active-blue;
   }
 }
+
+.btn-danger {
+  background-color: red;
+  transition: background-color 0.3s ease;
+  &:hover {
+    background-color: darken($color: red, $amount: 10);
+  }
+}
